--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>News Blog | Anasayfa</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/ms-icon-144x144.png" />
         <link
             href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
             rel="stylesheet"
@@ -12,15 +12,18 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-        <header class="header" id="header">
+        <header class="header">
+            <!--Sitenin başlığını temsil eden kısım-->
             <nav class="navbar container">
-                <a href="./index.html">
+                <a href="/index.html">
                     <h2 class="logo">News Blog</h2>
                 </a>
-
+                <!---------------------------------------------------->
+                <!--Bu kısım da biz JavaScript kullanarak butonlara değer atayarak ne yapmasını gerektiğini söylediğimiz gibi burda da HTML VE CSS ile ve aşağıda label kullanarak mobilde menü kısmının açılmasını ve arama simgesi search tıkladığımızda arama kutusunun açılmasını sağlar-->
                 <input type="checkbox" id="menu-toggle-checkbox" />
 
                 <input type="checkbox" id="search-toggle-checkbox" />
+                <!---------------------------------------------------->
 
                 <div class="menu" id="menu">
                     <ul class="list">
@@ -32,12 +35,15 @@
                         <li class="list-item"><a href="#" class="list-link">Haberler</a></li>
                         <li class="list-item"><a href="#" class="list-link">Üyelik</a></li>
                         <li class="list-item"><a href="#" class="list-link">İletişim</a></li>
+                        <!-------------------------------------------------------->
+                        <!--burada önemli olan screen-lg-hidden: "Giriş Yap" ve "Üye Ol" butonları normalde sağ üsttedir. Ama mobilde sağ üstte yer kalmadığı için onları menünün içine de ekledik. Bu sınıf sayesinde bu linkler bilgisayarda gizlenir, sadece mobilde menü içinde görünür.-->
                         <li class="list-item screen-lg-hidden">
                             <a href="./signin.html" class="list-link">Giriş Yap</a>
                         </li>
                         <li class="list-item screen-lg-hidden">
                             <a href="./signup.html" class="list-link">Üye Ol</a>
                         </li>
+                        <!--------------------------------------------------------->
                     </ul>
                 </div>
 
@@ -47,14 +53,25 @@
                 </div>
 
                 <div class="list list-right">
+                    <!--- Burada needen <button> değil de <label>?Çünkü label etiketinin for özelliği vardır.for="search-toggle-checkbox" dediğimiz için, bu ikona tıklamak yukarıdaki gizli checkbox'a tıklamakla aynı şeydir.-->
                     <label
                         for="search-toggle-checkbox"
                         class="btn place-items-center search-icon-btn"
                     >
+                        <!--ri-search-line ve ri-close-line Remix Icon kütüphanesinin şifreleridir. Tarayıcıya hangi resmi çizeceğini söyleyen sınıf isimleridir. ri; kütüphane adı yani Remix Icon fa- olsaydı FontAwesome kütüphanesi, search; ikonun adı, line; stilimiz sadece dış çizgileri olsun-->
                         <i class="ri-search-line open-search-icon"></i>
                         <i class="ri-close-line close-search-icon"></i>
                     </label>
 
+                    <label
+                        for="menu-toggle-checkbox"
+                        class="btn place-items-center screen-lg-hidden menu-toggle-icon"
+                    >
+                        <!--meşhur hamburger butonu -->
+                        <i class="ri-menu-3-line open-menu-icon"></i>
+                        <i class="ri-close-line close-menu-icon"></i>
+                    </label>
+                    <!--burada da masaüstü görünümü için Giriş Yap ve Üye Ol linklerini kullandık-->
                     <a href="#" class="list-link screen-sm-hidden">Giriş Yap</a>
                     <a href="#" class="list-link screen-sm-hidden btn sign-up-btn fancy-border">
                         <span>Üye Ol</span>
