New news has been added to the site

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a href="index.html" class="list-link current">Anasayfa</a>
                         </li>
                         <li class="list-item"><a href="#" class="list-link">Kategori</a></li>
-                        <li class="list-item"><a href="#" class="list-link">İncelemeler</a></li>
+                        <li class="list-item"><a href="#" class="list-link">Hakkımda</a></li>
                         <li class="list-item"><a href="#" class="list-link">Haberler</a></li>
                         <li class="list-item"><a href="#" class="list-link">Üyelik</a></li>
                         <li class="list-item"><a href="#" class="list-link">İletişim</a></li>
@@ -82,12 +82,18 @@
         <section class="featured-articles section section-header-offset">
             <div class="featured-content container">
                 <div class="featured-article-image">
-                    <img src="img/featured-1.jpg" alt="Öne Çıkan Haber" class="article-image" />
+                    <img
+                        src="img/nano-banana-pro-ya-rakip-flux-2-tanitildi-tum-pc-lere-geliyor199024_0.jpg"
+                        alt="Öne Çıkan Haber"
+                        class="article-image"
+                    />
                 </div>
 
                 <div class="featured-article-data">
                     <span class="article-category">Teknoloji</span>
-                    <h2 class="article-title">Yapay Zeka Dünyayı Nasıl Değiştiriyor?</h2>
+                    <h2 class="article-title">
+                        Nano Banana Pro'ya rakip FLUX.2 tanıtıldı: Tüm PC'lere geliyor
+                    </h2>
 
                     <div class="article-data-container">
                         <span class="article-data">26 Kasım 2025</span>
@@ -96,8 +102,80 @@
                     </div>
 
                     <p class="article-description">
-                        Teknolojinin hızla ilerlemesiyle birlikte yapay zeka hayatımızın her alanına
-                        giriyor. İşte gelecekte bizi bekleyenler...
+                        Black Forest Labs, metinden yüksek çözünürlüklü görsel üretebilen yeni
+                        modeli FLUX.2’yi resmen tanıttı. Nano Banana Pro’nun doğrudan rakibi olarak
+                        konumlanan FLUX.2, yalnızca görüntü kalitesiyle değil ...
+                    </p>
+
+                    <a href="#" class="article-btn">
+                        <span>Devamını Oku</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="featured-articles section section-header-offset">
+            <div class="featured-content container">
+                <div class="featured-article-image">
+                    <img
+                        src="img/meta-ray-ban-akilli-gozluklerinin-2-neslini-tanitti196217_0.jpg"
+                        alt="Öne Çıkan Haber"
+                        class="article-image"
+                    />
+                </div>
+
+                <div class="featured-article-data">
+                    <span class="article-category">Teknoloji</span>
+                    <h2 class="article-title">
+                        Meta, Ray-Ban akıllı gözlüklerinin 2. neslini tanıttı
+                    </h2>
+
+                    <div class="article-data-container">
+                        <span class="article-data">26 Kasım 2025</span>
+                        <span class="article-data-spacer"></span>
+                        <span class="article-data">5 dk okuma</span>
+                    </div>
+
+                    <p class="article-description">
+                        Meta, Connect etkinliğinde Ray-Ban akıllı gözlüklerinin ikinci neslini
+                        duyurdu. “Ray-Ban Meta Gen 2” olarak adlandırılan bu yeni nesil gözlükler,
+                        geliştirilmiş pil ömrü ve 3K video kayıt kapasitesi ile dikkat çekiyor...
+                    </p>
+
+                    <a href="#" class="article-btn">
+                        <span>Devamını Oku</span>
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="featured-articles section section-header-offset">
+            <div class="featured-content container">
+                <div class="featured-article-image">
+                    <img
+                        src="img/the-times-artik-kesinlesti-evde-kopek-besleyenler-daha-fazla-yasiyor-koij.jpg"
+                        alt="Öne Çıkan Haber"
+                        class="article-image"
+                    />
+                </div>
+
+                <div class="featured-article-data">
+                    <span class="article-category">Yaşam</span>
+                    <h2 class="article-title">
+                        The Times: Artık kesinleşti | Evde köpek besleyenler daha fazla yaşıyor
+                    </h2>
+
+                    <div class="article-data-container">
+                        <span class="article-data">26 Kasım 2025</span>
+                        <span class="article-data-spacer"></span>
+                        <span class="article-data">5 dk okuma</span>
+                    </div>
+
+                    <p class="article-description">
+                        Florida Atlantic Üniversitesi’nin yürüttüğü bir araştırma, köpeklerle
+                        çalışmanın hücresel düzeyde “biyolojik yaşlanmayı yavaşlatıcı” etkiler
+                        yaratabileceğini ortaya koydu. Araştırma, özellikle yaşı ilerlemiş
+                        kadınlarda ...
                     </p>
 
                     <a href="#" class="article-btn">
