About me section completed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                             <a href="index.html" class="list-link current">Anasayfa</a>
                         </li>
                         <li class="list-item"><a href="#" class="list-link">Kategori</a></li>
-                        <li class="list-item"><a href="#" class="list-link">Hakkımda</a></li>
+                        <li class="list-item">
+                            <a href="/about.html" class="list-link">Hakkımda</a>
+                        </li>
                         <li class="list-item"><a href="#" class="list-link">Haberler</a></li>
                         <li class="list-item"><a href="#" class="list-link">Üyelik</a></li>
                         <li class="list-item"><a href="#" class="list-link">İletişim</a></li>
