Added copyright information with footer

--- a/index.html
+++ b/index.html
@@ -187,5 +187,24 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="company-data">
+                    <ul class="list-media">
+                        <li class="list-item">
+                            <a href="https://github.com/Efe-Deniz" class="list-link"
+                                ><i class="ri-github-line"></i
+                            ></a>
+                        </li>
+                        <li class="list-item">
+                            <a href="https://www.linkedin.com/in/aliefedeniz" class="list-link"
+                                ><i class="ri-linkedin-line"></i
+                            ></a>
+                        </li>
+                    </ul>
+                    <span class="copyright-notice">&copy;2025 NewsBlog. All rights reserved.</span>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
